2000-01-27  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmIconMan/xmanager.c (draw_manager):
	fixed drawing of empty region introduced with 'transparency' patches

	* FvwmIconMan/fvwm.c (ProcessMessage):
	fixed usage of 'focus' colours when followfocus is false

	* FvwmCommand/FvwmCommandS.c:
	removed debug fprintf

	* FvwmIconMan/xmanager.c (clear_empty_region):
	fixed drawing background in non-transparent IconMan

	* FvwmPager/x_pager.c (MoveWindow):
	(IconMoveWindow):
	fixed dragging windows out of pager

	* FvwmCommand/FvwmCommand.c:
	-Wall fix

	* FvwmCommand/FvwmCommand.h:
	* FvwmCommand/FvwmCommandS.c:
	fixed communication problem between server and client
	removed some code without effects
	simplified protocol
	removed dead pipe error message

2000-01-26 olicha	<olivier.chapuis@free.fr>
	* FvwmScript/Scripts/ScriptFvwmBellSetup:
	* FvwmScript/Scripts/ScriptFvwmKeyboardSetup:
	* FvwmScript/Scripts/ScriptFvwmPointerSetup:
	* FvwmScript/Scripts/ScriptFvwmSreenSetup:
	* FvwmScript/FvwmScript.1:
	Some fixes

2000-01-24  Hippo

	* FvwmIconMan/xmanager.c: Fixed dissapearing mini-icons

2000-01-24  Brad Giaccio  <bgiaccio@psrw.com>

	* FvwmPager/FvwmPager.c (ParseOptions):
	fix for fonts with quotes and "none"

2000-01-24  Brad Giaccio  <bgiaccio@psrw.com>

	* FvwmButtons/parse.c (my_get_font): patch to handle font as last option

2000-01-21  Chris Rankin  <rankinc@zipworld.com.au>

	* FvwmIconMan/FvwmIconMan.c
	Similar trick as for FvwmAuto; just do these two modules for now
	as these are the only ones that people are seeing problems with.

2000-01-21  Chris Rankin  <rankinc@zipworld.com.au>

	* FvwmAuto/FvwmAuto.c
	Changed default signal disposition to SA_RESTART instead of
	SA_INTERRUPT. Hopefully non-Linux OSs also interrupt select()
	regardless of this setting.

2000-01-19  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmButtons/parse.c (my_get_font):
	(ParseContainer):
	(ParseButton):
	can now have fontname with spaces in buttons
