@@ -1,3 +1,9 @@
+2000-01-26 olicha	<olivier.chapuis@free.fr>
+
+	* FvwmPager/FvwmPager.c (main):
+	* FvwmPager/FvwmPager.1:
+	FvwmParger can use aliases.
+
 2000-01-27  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* FvwmIconMan/xmanager.c (draw_manager):
@@ -27,6 +33,7 @@
 	removed dead pipe error message
 
 2000-01-26 olicha	<olivier.chapuis@free.fr>
+
 	* FvwmScript/Scripts/ScriptFvwmBellSetup:
 	* FvwmScript/Scripts/ScriptFvwmKeyboardSetup:
 	* FvwmScript/Scripts/ScriptFvwmPointerSetup:
